Update title to Four Frames One Moment

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lomo Lab</title>
+  <title>Four Frames One Moment</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
 
@@ -342,7 +342,7 @@
 
   <div class="container">
     <header>
-      <h1>Lomo Lab</h1>
+      <h1>Four Frames<br>One Moment</h1>
       <p class="subtitle">Action Sampler GIF Maker</p>
     </header>
 
@@ -385,7 +385,7 @@
     </div>
 
     <footer>
-      Four frames. One moment.
+      4fram.es
     </footer>
   </div>
 
